--- a/src/emuxo-theme-default.styl
+++ b/src/emuxo-theme-default.styl
@@ -40,10 +40,7 @@ button.em-button-link
     text-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
 
 .em-textbox, .em-textarea, .em-dropdown
-  > label
-    font-size: $font-size-small
   p
-    font-size: $font-size-small
     &.em-error
       color: $color-red
 
